--- a/webalan.html
+++ b/webalan.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Soy Alan Lezama</h1>
-    <p>estudio en el centro de estudios gestalt y me dedico al diseño web UX/UI</p>
+    <p>estudiaba en el centro de estudios gestalt y me gustaria dedicarme al diseño web UX/UI</p>
   </body>
 </html>
