cargamos los  estilos

--- a/webalan.html
+++ b/webalan.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sobre mi</title>
+    <link rel="stylesheet" href="css/stilos.css">
   </head>
   <body>
     <h1>Soy Alan Lezama</h1>
