--- a/webalan.html
+++ b/webalan.html
@@ -8,5 +8,8 @@
   <body>
     <h1>Soy Alan Lezama</h1>
     <p>estudiaba en el centro de estudios gestalt y me gustaria dedicarme al diseño web UX/UI</p>
+    <br>
+    <br>
+    <p>un nuevo párrafo paps</p>
   </body>
 </html>
