--- a/webalan.html
+++ b/webalan.html
@@ -6,10 +6,14 @@
     <link rel="stylesheet" href="css/stilos.css">
   </head>
   <body>
-    <h1>Soy Alan Lezama</h1>
-    <p>estudiaba en el centro de estudios gestalt y me gustaria dedicarme al diseño web UX/UI</p>
-    <br>
-    <br>
-    <p>un nuevo párrafo paps</p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el párrafo de inicio</p>
+        <br>
+        <br>
+        <p>Aquí vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+      </div>
+    </div>
   </body>
 </html>
